start-sanitize-cygnus
Fri Feb  5 19:53:52 1999  Doug Evans  <devans@canuck.cygnus.com>

	* gas/m32r/relax-2.[sd]: New testcase.
	* gas/m32r/m32rx.exp: Run it.

Thu Feb  4 14:13:32 1999  Doug Evans  <devans@canuck.cygnus.com>

	* gas/m32r/outofrange.s: New testcase.
	* gas/m32r/error.exp: Run it.

1999-01-06  Doug Evans  <devans@casey.cygnus.com>

	* gas/m32r/interfere.s: New testcase.
	* gas/m32r/error.exp: Run it.

end-sanitize-cygnus
start-sanitize-r5900
1999-01-06  Frank Ch. Eigler  <fche@cygnus.com>

	* gas/mips/r5900.[sd]: Add tests for multu1/div1/divu1 insns.

end-sanitize-r5900
1998-12-18  Nick Clifton  <nickc@cygnus.com>

	* gas/fr30/allinsn.s: Fix to match latest assembler syntax.
	* gas/fr30/allinsn.d: Fix to match latest assembler output

start-sanitize-sky
Thu Dec 10 11:20:10 1998  Doug Evans  <devans@canuck.cygnus.com>

	* gas/mips/vu0.[sd]: Update vmtir testcases.
	* gas/dvp/lower-1.[sd]: Update mtir testcase.

	* gas/dvp/lower-2.[sd]: Handle label as immediate data.

	Fri Sep 18 16:21:22 1998  Doug Evans  <devans@canuck.cygnus.com>

	* gas/dvp/gifimage-1.[sd]: Add testcases for EOP.

	Thu Jul 23 18:31:03 1998  Frank Ch. Eigler  <fche@cygnus.com>

	* gas/dvp/upper-[12].[sd]: Test two-operand CLIP; remove
	old one-operand CLIP.

Wed Dec  9 14:01:32 1998  Jeffrey A Law  (law@cygnus.com)

	* gas/vtable/vtable.exp: Do not run these tests for the dvp assembler.

end-sanitize-sky
1998-12-03  Nick Clifton  <nickc@cygnus.com>

	* gas/fr30/allinsn.d: Updated to match latest assembler output.

1998-12-02  Nick Clifton  <nickc@cygnus.com>

	* gas/fr30/allinsn.s: Replace illegal insns with legal versions.

	* gas/fr30/allinsn.d: Update to match latest assembler output.

Thu Nov 19 15:59:51 1998  Dave Brolley  <brolley@cygnus.com>

	* gas/fr30/allinsn.s: Reorder insns for better simulation.

Thu Nov 19 07:50:44 1998  Doug Evans  <devans@charmed.cygnus.com>

	* gas/mips/sync.[sd]: New testcase.
	* gas/mips/mips.exp: Run it.
