@@ -5,6 +5,6 @@
 
 RELOCATION RECORDS FOR \[.text\]:
 OFFSET +TYPE +VALUE 
-0+0000000 R_.*_GNU_VTENTRY  vtbl_a\+0x0+10
+0+0000000 R_.*_GNU_VTENTRY  vtbl_a.*
 
 
